# LrnGit

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/.cargo/: config.toml
client/src/: macros.rs  main.rs  parser.rs  remote.rs  tcp.rs  types.rs  utils.rs
client/src/add/: helpers.rs  mod.rs
client/src/branch/: mod.rs
client/src/commit/: mod.rs
client/src/config/: mod.rs
client/src/fs/: mod.rs
client/src/init/: mod.rs
client/src/log/: mod.rs
client/src/object/: blob.rs  commit.rs  index.rs  mod.rs  tree.rs  utils.rs
client/src/pack/: upload.rs
client/src/pull/: mod.rs
client/src/push/: mod.rs
client/src/refs/: mod.rs  origin.rs
daemon/: Cargo.toml  README.md
daemon/.cargo/: config.toml
daemon/src/: client.rs  main.rs  process.rs
lib/: Cargo.toml
lib/src/: lib.rs  out.rs  parser.rs
lib/src/fs/: mod.rs  pack.rs
lib/src/objects/: blob.rs  commit.rs  index.rs  mod.rs  tree.rs  utils.rs
lib/src/pack/: mod.rs  refs.rs  upload.rs
lib/src/remote/: mod.rs  origin.rs
server/: .gitignore  Cargo.toml
server/.cargo/: config.toml
server/src/: client.rs  main.rs
services/receive/: .gitignore  Cargo.toml
services/upload/: Cargo.toml
src/: main.rs  parser.rs  utils.rs
src/add/: helpers.rs  index.rs  mod.rs
src/branch/: mod.rs
src/commit/: mod.rs
src/config/: mod.rs
src/fs/: .null-ls_396431_tree.rs  index.rs  mod.rs  tree.rs
src/init/: mod.rs
src/log/: mod.rs
src/object/: blob.rs  commit.rs  index.rs  mod.rs  tree.rs  utils.rs
src/refs/: mod.rs
src/status/: helper.rs  mod.rs
src/switch/: mod.rs
(+6 files in other folders)
