[package]
name = "lrngit"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
blob = "=0.3.0"
hex = "0.4.3"
lrncore = { git = "https://github.com/Lrn-projects/LrnCore.git", version = "0.1.0", branch="main" }
sha1 = "0.10.6"
flate2 = "1.1.0"
rust-ini = "0.21.1"
dirs = "6.0.0"
chrono = "0.4.40"
